fix broken layout; add links to temp.meurio

--- a/app/assets/stylesheets/meurio_ui/meurio_header.css.sass
+++ b/app/assets/stylesheets/meurio_ui/meurio_header.css.sass
@@ -5,15 +5,14 @@
   .meurio_logo_and_user_menu
     background: $green
     line-height: 35px
+    padding: 7px 0
     .meurio_logo
-      padding: 7px 0
       img
         float: left
     .user_menu
       text-align: right
       color: white
       position: relative
-      padding: 5px 0
       font-weight: bold
       .current_user
         line-height: 35px
@@ -39,7 +38,7 @@
         z-index: 1000
         width: 200px
         right: 0
-        top: 49px
+        top: 42px
         display: none
         a, span
           display: block
@@ -53,11 +52,11 @@
   .meurio_apps_and_application_menu
     line-height: 59px
     background: white
+    padding: 10px 0
     .meurio_apps
       cursor: pointer
       position: relative
       overflow: visible
-      padding: 10px 0
       font-size: 20px
       font-weight: bold
       a
@@ -79,10 +78,10 @@
       .other_apps
         position: absolute
         background: white
-        top: 79px
+        top: 50px
         z-index: 1000
         width: 640px
-        padding: 1em
+        padding: 2em 1em 1em 1em
         display: none
         .meurio_app
           font-size: .7em
@@ -104,7 +103,6 @@
 
     .application_menu
       text-align: right
-      padding: 10px 0
       a
         display: inline-block
         margin-left: 1.5em
